<h3>July 19th, 2015</h3>
<b><u>SERVER</u></b>
 - Succesfully moved vippy to a new server at a different hosting company.
        As most of you guys will have noticed, the previous one had to much interuptions.




<h3>July 10th, 2015</h3>
<b><u>VIPPY</u></b>
 - Updated to Aegis data export.




<h3>June 3rd, 2015</h3>
<b><u>VIPPY</u></b>
 - Updated to Carnyx data export.

<b><u>FIXES</u></b>
 - Fixed an out of memory exception that could occur when adding a wormhole between systems when neither system was already on the map.




<h3>May 19th, 2015</h3>
<b><u>SCANNING</u></b>
 - When copy pasting more then 2 signatures, check for old signatures that are no longer in the copy paste and remove them.
 	This will automatically clear old signatures. If the signatures was a wormhole, try find the matching wormhole and close it's connection.

<b><u>VIPPY</u></b>
 - Fixed the error that caused Vippy to go bananas last weekend.




<h3>April 28th, 2015</h3>
<b><u>SCANNING</u></b>
 - Improved signaturelist layout for (very) small windows (such as mobiles devices or small windows in the IGB)
 - When jumping through a wormhole connecting 2 kspace systems, VIPPY would not map it.
 	It will now check if the 2 systems are directly connected by a gate. If not, VIPPY will now assume a wormhole map the systems.
 - Improved the auto mapping layout algorithm.

{if isset($App->user) && $App->user->hasRight('atlas')}
<b><u>ATLAS</u></b>
 - Fixed menu ATLAS link.

{/if}
<b><u>VIPPY</u></b>
 - Import the new static data dump for the Mosaic expansion.
{if isset($App->user) && $App->user->getIsDirector()}
 - Add an access control group page. All directors can now set wich corporations have access to VIPPY.

{/if}
<b><u>FIXES</u></b>
 - `Delete all Signatures` also deleted POS signatures. Deleting all sigs will now keep POS signatures.
 - Popups (such as edit connection info) would not center on screen if you scrolled horizontally.




<h3>February 10th, 2015</h3>
<b><u>SCANNING</u></b>