@@ -25,14 +25,26 @@ namespace scanning\controller
 						$shipTypeID = $group->getShipBasedOnAvarageMass()->id;
 					}
 					else
-					{
 						$shipTypeID = str_replace("ship","",$val);
-					}
 
-					for ($i=0; $i<$_POST["amount"][$key]; $i++) {
-						$connection->addJump($shipTypeID);
-					}
+                    if (is_numeric($shipTypeID) && $shipTypeID > 0)
+                    {
+                        for ($i = 0; $i < $_POST["amount"][$key]; $i++) {
+                            $connection->addJump($shipTypeID);
+                        }
+                    }
 				}
+
+                if (isset($_POST["manual"]))
+                {
+                    if (strlen(trim($_POST["manual"]["mass"])) > 0 && $_POST["manual"]["mass"] > 0)
+                    {
+                        for ($i=0; $i<$_POST["manual"]["amount"]; $i++) {
+                            $connection->addMass($_POST["manual"]["mass"]*1000000);
+                        }
+                    }
+                }
+
 				\AppRoot::redirect("index.php?module=scanning&section=overview");
 			}
 
@@ -98,36 +110,67 @@ namespace scanning\controller
 			$connection = new \scanning\model\Connection();
 			$connection->loadById($connectionID);
 
-			if ($results = \MySQL::getDB()->getRows("SELECT t.typename, g.groupid, g.groupname, t.mass, l.jumptime, l.characterid
+            if ($results = \MySQL::getDB()->getRows("SELECT t.typename, g.groupid, g.groupname, t.mass, l.jumptime, l.characterid
 													FROM 	mapwormholejumplog l
 														INNER JOIN ".\eve\Module::eveDB().".invtypes t ON t.typeid = l.shipid
 														INNER JOIN ".\eve\Module::eveDB().".invgroups g ON g.groupid = t.groupid
 													WHERE 	l.connectionid = ?
 													ORDER BY g.groupname, t.typename"
-									, array($connection->id)))
-			{
-				foreach ($results as $result)
-				{
-					$key = "beforemass";
-					if ($connection->massUpdateDate !== null) {
-						if (strtotime($result["jumptime"]) > strtotime($connection->massUpdateDate))
-							$key = "aftermass";
-					}
+                , array($connection->id)))
+            {
+                foreach ($results as $result)
+                {
+                    $key = "beforemass";
+                    if ($connection->massUpdateDate !== null) {
+                        if (strtotime($result["jumptime"]) > strtotime($connection->massUpdateDate))
+                            $key = "aftermass";
+                    }
 
-					if (!isset($jumplog[$key][$result["groupid"]]))
-					{
-						$jumplog[$key][$result["groupid"]] = array(	"class" 	=> $result["groupname"],
-																	"amount" 	=> 0,
-																	"manual" 	=> 0,
-																	"mass" 		=> 0);
-					}
-					$jumplog[$key][$result["groupid"]]["mass"] += $result["mass"];
-					$jumplog[$key][$result["groupid"]]["amount"] += 1;
-					if ($result["characterid"] == null)
-						$jumplog[$key][$result["groupid"]]["manual"] += 1;
+                    if (!isset($jumplog[$key][$result["groupid"]]))
+                    {
+                        $jumplog[$key][$result["groupid"]] = array(	"class" 	=> $result["groupname"],
+                                                                       "amount" 	=> 0,
+                                                                       "manual" 	=> 0,
+                                                                       "mass" 		=> 0);
+                    }
+                    $jumplog[$key][$result["groupid"]]["mass"] += $result["mass"];
+                    $jumplog[$key][$result["groupid"]]["amount"] += 1;
+                    if ($result["characterid"] == null)
+                        $jumplog[$key][$result["groupid"]]["manual"] += 1;
 
-				}
-			}
+                }
+            }
+
+            /**
+             * Manual added mass
+             */
+            if ($results = \MySQL::getDB()->getRows("SELECT *
+                                                    FROM    mapwormholejumplog
+                                                    WHERE   shipid IS NULL
+                                                    AND     connectionid = ?"
+                                        , array($connection->id)))
+            {
+                foreach ($results as $result)
+                {
+                    $key = "beforemass";
+                    if ($connection->massUpdateDate !== null) {
+                        if (strtotime($result["jumptime"]) > strtotime($connection->massUpdateDate))
+                            $key = "aftermass";
+                    }
+
+                    if (!isset($jumplog[$key][0]))
+                    {
+                        $jumplog[$key][0] = array("class"   => "none",
+                                                  "amount" 	=> 0,
+                                                  "manual" 	=> 0,
+                                                  "mass"	=> 0);
+                    }
+                    $jumplog[$key][0]["mass"] += $result["mass"];
+                    if ($result["characterid"] == null)
+                        $jumplog[$key][0]["manual"] += 1;
+
+                }
+            }
 
 			$tpl = \SmartyTools::getSmarty();
 			$tpl->assign("connection", $connection);
